# ssi-protocol-dapp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  craco.config.js  package-lock.json  package.json  tsconfig.json
program/: Cargo.toml
program/src/: buffer.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
program/src token/: state.rs
public/: index.html
src/: manifest.json  routes.tsx
src/client/: deploy.ts  init.ts
src/client/util/: store.ts
src/client/util/store/: config.json
src/components/AppBar/: index.tsx
src/components/Layout/: Themed.tsx  index.tsx
src/config/: tokens.json
src/constants/: labels.ts
src/instructions/: instructions.ts  state.ts
src/relayer/: relayer.ts
src/transactions/: tyronsol.ts
src/types/: buffer-layout.d.ts
src/utils/: ids.ts
src/views/: index.tsx
src/views/home/: index.tsx
src/views/sendmessage/: index.tsx
src/views/transferxzil/: index.tsx
