# Note: This crate must be built using do.sh

[package]
name = "ssi-protocol-dapp"
version = "0.1.0"
description = "Decentralized application implementing the SSI Protocol"
authors = ["Tyron Pungtas Open Association <pungtas@pm.me>"]
repository = "https://github.com/pungtas/ssi-protocol-dapp"
edition = "2018"
license = "GPL-3.0-only"
publish = false

[features]
no-entrypoint = []
program = []
default = ["program"]
test-bpf = []

[dependencies]
solana-program = "1.5.11"
num_enum = "0.5.1"
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.5.0"
solana-sdk = "1.5.11"
solana-validator = "1.5.0"
tokio = { version = "0.3", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
